<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_ourway_header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_ourway_summary1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ourway_summary1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_ourway_header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/tv_ourway_summary2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ourway_summary2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_ourway_header3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:id="@+id/tv_ourway_summary3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ourway_summary3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_ourway_header4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header4"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/tv_ourway_summary4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ourway_summary4"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_ourway_header5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header5"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:id="@+id/tv_ourway_summary5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ourway_summary5"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_ourway_header6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header6"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/tv_ourway_summary6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ourway_summary6"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_ourway_header7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header7"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorPrimary"
            />

        <TextView
            android:id="@+id/tv_ourway_summary7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ourway_summary7"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_ourway_header8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_header8"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/tv_ourway_summary8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ourway_summary8"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>


</ScrollView>



