<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/image2">


        <TextView
        android:id="@+id/tv_contact_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/contact_header_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <TextView
        android:id="@+id/tv_contact_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/contact_summary_text"
        android:textAlignment="center"
        android:clickable="true"
        android:textIsSelectable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_header"/>


        </android.support.constraint.ConstraintLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6133a7"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
        android:id="@+id/tv_contact_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/contact_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray1"
        android:padding="20dp">

        <TextView
        android:id="@+id/tv_contact_label"
        android:textColor="@color/colorAccent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/contact_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <TextView
        android:id="@+id/tv_contact_uturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/contact_u_turn_name_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_label"/>

        <TextView
        android:id="@+id/tv_contact_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact_phone_label"
        app:layout_constraintRight_toLeftOf="@+id/tv_contact_uturn"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_uturn"/>

        <TextView
        android:id="@+id/tv_contact_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/contact_phone_text"
        android:clickable="true"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_contact_phone_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_contact_phone_label"/>

        <TextView
        android:id="@+id/tv_contact_email2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contact_email_label"
        app:layout_constraintRight_toRightOf="@+id/tv_contact_phone_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_phone_label"
        />

        <TextView
        android:id="@+id/tv_contact_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:text="@string/contact_email_text"
        android:clickable="true"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_contact_email2_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_contact_email2_label"/>

        <TextView
        android:id="@+id/tv_contact_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contact_address_label"
        app:layout_constraintRight_toRightOf="@+id/tv_contact_email2_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_email2_label"
        />

        <TextView
        android:id="@+id/tv_contact_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/contact_address_text"
        android:minLines="2"
        android:lines="2"
        android:clickable="true"
        android:textIsSelectable="true"
        app:layout_constraintLeft_toRightOf="@+id/tv_contact_address_label"
        app:layout_constraintTop_toTopOf="@+id/tv_contact_address_label"/>

        </android.support.constraint.ConstraintLayout>

        <WebView
            android:id="@+id/webview_contacts"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray2"
            android:padding="20dp">


            <TextView
                android:text="@string/contact_connect_social_header_text"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_connect_social_header"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:layout_width="wrap_content"/>
            <TextView
                android:text="@string/contact_connect_social_summary_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_connect_social_summary"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_connect_social_header"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_connect_social_summary"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent">
                <ImageView
                    android:id="@+id/iv_icon_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:contentDescription="@string/content_desc_facebook_icon"/>

                <ImageView
                    android:layout_marginStart="20dp"
                    android:id="@+id/iv_icon_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_youtube"
                    android:contentDescription="@string/content_desc_youtube_icon"/>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/colorPrimary">


            <TextView
                android:text="@string/contact_email_header"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contact_email_header"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <TextView
                android:text="@string/contact_email_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contact_email_summary"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_email_header"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:text="@string/contact_email_sender_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contact_email_name_label"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_email_summary"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="#506373"
                android:id="@+id/et_contact_email_name"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_name_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_email_name_label"
                android:hint="@string/contact_email_sender_hint"
                android:maxLines="1"/>

            <TextView
                android:text="@string/contact_email_address_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contact_email_label"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_contact_email_name"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_contact_email_email"
                android:background="#506373"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_name_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_email_label"
                android:hint="@string/contact_email_address_hint"
                android:inputType="textEmailAddress"/>

            <TextView
                android:text="@string/contact_email_subject_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contact_email_subject_label"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_contact_email_email"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_contact_email_subject"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_label"
                android:background="#506373"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_email_subject_label"
                android:hint="@string/contact_email_subject_hint"
                android:maxLines="1"
                android:inputType="textEmailSubject"/>


            <TextView
                android:text="@string/contact_email_message_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contact_email_message_label"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_contact_email_subject"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_contact_email_message"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_name_label"
                app:layout_constraintRight_toRightOf="parent"
                android:background="#506373"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:minLines="3"
                android:maxLines="10"
                android:minHeight="60dp"
                android:lines="5"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_email_message_label"
                android:hint="@string/contact_email_message_hint"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_contact_email_send"
                app:layout_constraintLeft_toLeftOf="@+id/tv_contact_email_name_label"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintTop_toBottomOf="@+id/et_contact_email_message"
                android:text="@string/contact_send_email_label"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>